Migration to Java 17 make develop build pass.