@@ -63,6 +63,8 @@
             -Dsecurity.warningDefaultUsers=false
             <!-- new security feature -->
             -Dsecurity.createDefaultUsers=false
+            --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
+            --add-opens java.base/sun.security.x509=ALL-UNNAMED
         </argLine>
         <project.rootdir>${project.basedir}/../</project.rootdir>
     </properties>
