@@ -29,7 +29,8 @@
         <VERSION>${project.version}</VERSION>
         <BUILD>${implementation.build}; ${maven.build.timestamp}</BUILD>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <argLine>-Xmx${heapSize} -Xms${heapSize} -XX:MaxDirectMemorySize=512g -Dstorage.diskCache.bufferSize=4096</argLine>
+        <argLine>-Xmx${heapSize} -Xms${heapSize} -XX:MaxDirectMemorySize=512g -Dstorage.diskCache.bufferSize=4096
+            --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED --add-opens java.base/sun.security.x509=ALL-UNNAMED</argLine>
         <project.rootdir>${project.basedir}/../</project.rootdir>
     </properties>
 
