@@ -33,8 +33,8 @@
     <name>OrientDB GraphDB</name>
 
     <properties>
-        <javac.src.version>16</javac.src.version>
-        <javac.target.version>16</javac.target.version>
+        <javac.src.version>${maven.compiler.source}</javac.src.version>
+        <javac.target.version>${maven.compiler.target}</javac.target.version>
         <jar.manifest.mainclass>com.orientechnologies.orient.server.OServerMain</jar.manifest.mainclass>
         <osgi.import>
             com.tinkerpop.blueprints;resolution:=optional,
@@ -66,6 +66,8 @@
             -Dstorage.diskCache.checksumMode=storeAndThrow
             -Dindex.allowManualIndexes=false
             -Dsecurity.warningDefaultUsers=false
+            --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
+            --add-opens java.base/sun.security.x509=ALL-UNNAMED
         </argLine>
         <project.rootdir>${project.basedir}/../</project.rootdir>
     </properties>
@@ -143,12 +145,12 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy</artifactId>
-            <version>2.5.8</version>
+            <version>2.5.15</version>
         </dependency>
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-jsr223</artifactId>
-            <version>2.5.8</version>
+            <version>2.5.15</version>
         </dependency>
         <dependency>
             <groupId>org.apache.httpcomponents</groupId>
