@@ -14,7 +14,8 @@
     <name>OrientDB Test Commons</name>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <argLine>-Xmx${heapSize}</argLine>
+        <argLine>-Xmx${heapSize} --add-opens jdk.unsupported/sun.misc=ALL-UNNAMED
+            --add-opens java.base/sun.security.x509=ALL-UNNAMED</argLine>
         <project.rootdir>${project.basedir}/../</project.rootdir>
     </properties>
 
